--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/node-fetch": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "eslint": "^8.23.1",
@@ -22,6 +23,7 @@
     "axios": "^0.27.2",
     "exceljs": "^4.3.0",
     "express": "^4.18.1",
+    "node-fetch": "^2.6.1",
     "puppeteer": "^17.1.3"
   }
 }
