--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "school59-dnevnik-private-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "build": "rimraf build/ && tsc",
     "start": "npm run build && node build/index.js"
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/morgan": "^1.9.3",
     "@types/node-fetch": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
@@ -23,6 +24,7 @@
     "axios": "^0.27.2",
     "exceljs": "^4.3.0",
     "express": "^4.18.1",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "puppeteer": "^17.1.3"
   }
