--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.27.2",
     "exceljs": "^4.3.0",
     "express": "^4.18.1",
+    "libreoffice-convert": "^1.4.1",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "puppeteer": "^17.1.3"
